ana-terraform-scenario-12/ana-terraform-scenario-12-temp/gitops/policies/overlays/prod/policies/strict-pod-security.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: prod-no-privileged
spec:
  match:
    excludedNamespaces: 
      - kube-system
      - monitoring
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    allowedHostPaths: []
    allowedUsers: []
    readOnlyRootFilesystem: true
    runAsNonRoot: true
    volumes:
      - configMap
      - emptyDir
      - projected
      - secret
      - downwardAPI
      - persistentVolumeClaim
